--- a/app/src/main/res/layout/dialog_layout.xml
+++ b/app/src/main/res/layout/dialog_layout.xml
@@ -1,28 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/dialog_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/off_white">
-
-    <TextView
-        android:id="@+id/dialog_one"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Block group"
-        android:padding="20dp"
-        android:background="@drawable/round_corner"
-        app:layout_constraintBottom_toTopOf="@id/dialog_two"/>
-
-    <TextView
-        android:id="@+id/dialog_two"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Report group"
-        android:padding="20dp"
-        app:layout_constraintTop_toBottomOf="@id/dialog_one"/>
-
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+    android:background="@color/off_white"
+    android:orientation="vertical">
+<!--    add dialog buttons dynamically using dialog_button.xml-->
+</LinearLayout>
