Added function to registration button, added navigation from registration screen to profile personalization screen

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -58,6 +58,10 @@
         android:id="@+id/registrationFragment"
         android:name="com.example.batchtest.RegistrationFragment"
         android:label="fragment_registration"
-        tools:layout="@layout/fragment_registration" />
+        tools:layout="@layout/fragment_registration" >
+        <action
+            android:id="@+id/action_registrationFragment_to_initialProfilePersonalizationFragment"
+            app:destination="@id/initialProfilePersonalizationFragment" />
+    </fragment>
 
 </navigation>
