--- a/app/src/main/res/layout/fragment_registration.xml
+++ b/app/src/main/res/layout/fragment_registration.xml
@@ -26,7 +26,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/fragment_registration_username"
-        android:text="Username"
+        android:text="Email"
         android:textColor="@color/purple_500"
         android:textSize="20sp"
         android:layout_marginStart="16dp"
@@ -40,7 +40,7 @@
     />
 
     <EditText
-        android:id="@+id/fragment_registration_username_et"
+        android:id="@+id/fragment_registration_email_et"
         style="@style/Widget.AppCompat.AutoCompleteTextView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -48,7 +48,7 @@
         android:layout_marginEnd="8dp"
         android:ems="10"
         android:fontFamily="@font/poppins_regular"
-        android:hint="@string/username_text_hint"
+        android:hint="@string/enter_email_text"
         android:inputType="textEmailAddress"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -70,7 +70,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/fragment_registration_username_et" />
+        app:layout_constraintTop_toBottomOf="@+id/fragment_registration_email_et" />
 
     <EditText
         android:id="@+id/fragment_registration_password_et"
