--- a/app/src/main/res/layout/fragment_my_group.xml
+++ b/app/src/main/res/layout/fragment_my_group.xml
@@ -4,66 +4,68 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    tools:context=".MyGroupFragment"
-    android:orientation="vertical"
-    android:id="@+id/myGroupsTab"
+    android:layout_height="match_parent"
     android:background="@color/app_background"
-    >
+   >
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/linearLayout"
+    <LinearLayout
+        android:id="@+id/myGroupsTab"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="30dp"
-        android:layout_marginRight="10dp"
-        app:layout_constraintBottom_toTopOf="@+id/textView2"
-        app:layout_constraintTop_toTopOf="@+id/textView2"
-        >
+        android:background="@color/app_background"
+        android:backgroundTint="@color/app_background"
+        android:orientation="vertical"
+        tools:context=".MyGroupFragment">
 
-        <TextView
-            android:id="@+id/textView2"
-            android:layout_width="0dp"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/linearLayout"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/my_groups"
-            android:textAppearance="?attr/textAppearanceHeadline5"
-            android:theme="@style/page_title"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/btn_to_group_creation"
-            app:layout_constraintStart_toStartOf="parent" />
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="30dp"
+            android:layout_marginRight="10dp"
+            app:layout_constraintBottom_toTopOf="@+id/textView2"
+            app:layout_constraintTop_toTopOf="@+id/textView2"
+            android:backgroundTint="@color/app_background">
 
-        <Button
-            android:id="@+id/btn_to_group_creation"
-            style="@style/Widget.AppCompat.Button.Borderless"
-            android:layout_width="59dp"
-            android:layout_height="43dp"
-            app:icon="@drawable/add_icon"
-            app:iconTint="#312B28"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/textView2"
-            app:layout_constraintTop_toTopOf="parent" />
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="@string/my_groups"
+                android:textAppearance="?attr/textAppearanceHeadline5"
+                android:theme="@style/page_title"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/btn_to_group_creation"
+                app:layout_constraintStart_toStartOf="parent" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            <Button
+                android:id="@+id/btn_to_group_creation"
+                style="@style/Widget.AppCompat.Button.Borderless"
+                android:layout_width="59dp"
+                android:layout_height="43dp"
+                app:icon="@drawable/add_icon"
+                app:iconTint="#312B28"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/textView2"
+                app:layout_constraintTop_toTopOf="parent" />
 
-    <View
-        android:id="@+id/horizontal_bar"
-        android:layout_width="wrap_content"
-        android:layout_height="1dp"
-        android:background="@color/horizontal_line"
-        />
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/recycleView"
-        android:padding="10dp"/>
+        <View
+            android:id="@+id/horizontal_bar"
+            android:layout_width="wrap_content"
+            android:layout_height="1dp"
+            android:background="@color/horizontal_line"
+            />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycleView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="10dp" />
 
 
-</LinearLayout>
+    </LinearLayout>
 </ScrollView>
