--- a/app/src/main/res/layout/my_group_list.xml
+++ b/app/src/main/res/layout/my_group_list.xml
@@ -10,14 +10,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-
-        >
+        android:backgroundTint="@color/app_background">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginTop="20dp"
             android:orientation="horizontal"
-            android:layout_marginTop="20dp">
+            >
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/group_profile"
@@ -32,7 +32,7 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:orientation="vertical">
 
                 <TextView
