--- a/app/src/main/res/layout/fragment_initial_profile_personalization.xml
+++ b/app/src/main/res/layout/fragment_initial_profile_personalization.xml
@@ -3,49 +3,53 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:fillViewport="true"
+    android:layout_height="wrap_content"
+    android:fillViewport="false"
     tools:ignore="NamespaceTypo"
+    android:layout_gravity="center_vertical"
     tools:context=".InitialProfilePersonalizationFragment"
     >
 
-
+ <!--         -->
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/sv_personalize"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/tv_greeting"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
         android:background="@color/app_background"
-        android:layout_gravity="center"
         >
+        <!--TextView that tells user about the purpose of the page      -->
         <TextView
             android:id="@+id/tv_greeting"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toTopOf="@id/sv_personalize"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:gravity="center"
+            android:gravity="fill_vertical"
             android:textSize="20sp"
             android:textColor="@color/purple_700"
             android:textStyle="bold"
-            tools:text="Let's Personalize Your New Account" />
+            android:text="Let's Personalize Your New Account" />
 
-        <ImageView
+        <!-- Crops the image into a circleView     -->
+        <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/iv_userPhoto"
-            android:layout_width="200dp"
-            android:layout_height="200dp"
-            app:layout_constraintTop_toBottomOf="@id/tv_greeting"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/btn_image_prompt"
+            android:layout_width="225dp"
+            android:layout_height="199dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="32dp"
+            android:layout_marginBottom="32dp"
+            android:scaleType="centerCrop"
             android:src="@drawable/profile_icon"
-            android:scaleType="fitCenter"
-            />
+            app:civ_border_color="#FF000000"
+            app:layout_constraintBottom_toTopOf="@id/btn_image_prompt"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tv_greeting"
+            app:layout_constraintVertical_bias="1.0"
+            tools:ignore="MissingConstraints" />
+
+        <!--  Button will be used to update User Profile       -->
         <Button
             android:id="@+id/btn_image_prompt"
             android:layout_width="wrap_content"
@@ -54,20 +58,22 @@
             app:layout_constraintTop_toBottomOf="@+id/iv_userPhoto"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            tools:text="Select Image"
+            android:text="Select Image"
             android:paddingTop="10dp"
             android:paddingBottom="10dp"
             />
+        <!--   Will Prompt User to Put a display name      -->
         <TextView
             android:id="@+id/tv_namePrompt"
             android:layout_width="331dp"
             android:layout_height="wrap_content"
-            tools:text="What should be your display Name: "
+            android:text="What should be your display Name: "
             android:textColor="@color/purple_500"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/btn_image_prompt"
             />
+        <!--  Area where User will enter their display name    -->
         <EditText
             android:id="@+id/et_displayName"
             android:layout_width="331dp"
@@ -78,17 +84,20 @@
             app:layout_constraintTop_toBottomOf="@id/tv_namePrompt"
             android:paddingBottom="15dp"
             />
+        <!--    Prompts User to select their birthdate     -->
         <TextView
             android:id="@+id/tv_birthDatePrompt"
             android:layout_width="331dp"
             android:layout_height="wrap_content"
             android:textColor="@color/purple_500"
-            tools:text="Select Your Date Of Birth: "
+            android:text="Select Your Date Of Birth: "
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/et_displayName"
             android:paddingTop="10dp"
             />
+
+        <!--    Used by the user to select their birthdate     -->
         <Button
             android:id="@+id/btn_birthdayPicker"
             android:layout_width="331dp"
@@ -99,12 +108,14 @@
             app:layout_constraintTop_toBottomOf="@id/tv_birthDatePrompt"
             android:layout_marginTop="10dp"
             />
+
+        <!--   Prompts User to Select their Gender      -->
         <TextView
             android:id="@+id/tv_genderPrompt"
             android:layout_width="331dp"
             android:layout_height="wrap_content"
             android:textColor="@color/purple_500"
-            tools:text="What Gender Do You Classify Yourself as "
+            android:text="What Gender Do You Classify Yourself as "
             android:layout_marginTop="10dp"
             app:layout_constraintTop_toBottomOf="@+id/btn_birthdayPicker"
             app:layout_constraintStart_toStartOf="parent"
@@ -112,6 +123,7 @@
             app:layout_constraintBottom_toTopOf="@+id/gender_radioGroup"
             />
 
+        <!--     RadioGroup that Contains the Gender options    -->
         <RadioGroup
             android:id="@+id/gender_radioGroup"
             android:layout_width="wrap_content"
@@ -139,6 +151,7 @@
                 />
             <RadioButton
                 android:id="@+id/na_radioButton"
+                android:checked="true"
                 android:text="Do not specify"
                 android:layout_width="wrap_content"
                 android:layout_height="25dp"
@@ -146,6 +159,7 @@
 
         </RadioGroup>
 
+        <!--   Prompts User to input personal bio      -->
         <TextView
             android:id="@+id/tv_personalBioPrompt"
             android:layout_width="331dp"
@@ -157,24 +171,32 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/gender_radioGroup"
             />
+        <!--    Area for User to input personal bio     -->
         <EditText
             android:id="@+id/et_personalBio"
-            android:layout_width="330dp"
-            android:layout_height="220dp"
-            android:layout_marginTop="10dp"
+            android:layout_width="0dp"
+            android:layout_height="150dp"
             android:background="@drawable/round_corner"
-            android:lineSpacingMultiplier="@integer/material_motion_duration_long_1"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:ems="10"
+            android:gravity="start|top"
+            android:inputType="textMultiLine"
+            android:minHeight="48dp"
+            android:padding="10dp"
+            app:layout_constraintStart_toStartOf="@id/gender_radioGroup"
+            app:layout_constraintEnd_toEndOf="@id/btn_birthdayPicker"
             app:layout_constraintTop_toBottomOf="@id/tv_personalBioPrompt"
             />
+        <!--    Button for user to update their profile and move on to the next section     -->
         <Button
+            android:id="@+id/btn_update"
             android:layout_width="330dp"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toBottomOf="@id/et_personalBio"
             app:layout_constraintStart_toStartOf="@id/et_personalBio"
+            app:layout_constraintBottom_toBottomOf="@id/sv_personalize"
             android:layout_marginTop="10dp"
             android:paddingTop="5dp"
+            android:layout_marginBottom="40dp"
             android:text="Update"
             />
 
