--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -10,7 +10,7 @@
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+        <item name="android:statusBarColor" >?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
         <item name="android:fontFamily">@font/karla</item>
         <item name="android:textColor">#070707</item>
@@ -18,7 +18,7 @@
 
     <!--    title for every page-->
     <style name="page_title" parent="" >
-        <item name="android:fontFamily">@font/poppins_bold</item>
+        <item name="android:fontFamily">@font/karla_extra_bold</item>
         <item name="android:textColor">#333333</item>
         <item name="android:textSize">28sp</item>
     </style>
