added user profile tab fragment

--- a/app/src/debug/res/drawable-anydpi/change_profile.xml
+++ b/app/src/debug/res/drawable-anydpi/change_profile.xml
@@ -3,7 +3,7 @@
     android:height="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24"
-    android:tint="@color/white"
+    android:tint="#333333"
     android:alpha="0.6">
   <path
       android:fillColor="@android:color/white"
